<resources>
    <string name="app_name">gamecompanion</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_guide">Guide</string>
    <string name="tab_streams">Streams</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_register_button">Register Here</string>

    <string name="profile_login_button">Log In</string>
    <string name="logout">Log out</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <string name="register_button">Register</string>
    <string name="login_button">Log In</string>

    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password requires a number and a letter</string>

    <string name="user_created_succesfully">User created</string>
    <string name="register_activity">Register</string>
    <string name="login_activity">Login</string>
    <string name="guide_detail_activity">GuideDetail</string>


</resources>
