<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/guideColorNoTransStrong"
        tools:context=".activity.LoginActivity">

    <EditText
            android:id="@+id/loginemailText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_medium_height"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/chat_size_text"
            android:layout_marginRight="@dimen/chat_size_text"
            android:gravity="center"
    />

    <EditText
            android:id="@+id/loginpasswordText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_medium_height"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:layout_marginLeft="@dimen/chat_size_text"
            android:layout_marginRight="@dimen/chat_size_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:gravity="center"
    />

    <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_medium_height"
            android:gravity="center"
            android:layout_marginTop="@dimen/button_size_text"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right"
            android:textSize="@dimen/login_button_size_text"
            android:background="@color/white"
            android:textStyle="bold"
            android:text="@string/login_button"
            style="@style/Widget.AppCompat.Button.Borderless"
    />

    <ProgressBar
            android:id="@+id/progresbar"
            android:indeterminate="true"
            android:layout_marginTop="@dimen/button_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</LinearLayout>