<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.ProfileFragment"
             android:orientation="vertical"
             android:gravity="center"
             android:background="@drawable/profilebg">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/guide_font_size"
            ></LinearLayout>

    <ImageView
            android:id="@+id/avatar"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/guide_font_size"
            android:clickable="true"
            android:src="@drawable/userdefault" />

    <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/chat_size_text"
            android:layout_marginBottom="@dimen/textbottom"
            android:layout_marginTop="@dimen/item_medium_height"
            />

    <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_medium_height"
            android:layout_marginLeft="@dimen/chat_size_text"
            android:layout_marginRight="@dimen/chat_size_text"
            android:fontFamily="@font/zeldafont"
            android:textSize="@dimen/button_size_text"
            android:background="@color/white"
            android:text="@string/profile_register_button"/>
    <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:textSize="@dimen/button_size_text"
            android:layout_marginTop="@dimen/chat_size_text"
            android:layout_marginLeft="@dimen/chat_size_text"
            android:layout_marginRight="@dimen/chat_size_text"
            android:background="@color/white"
            android:fontFamily="@font/zeldafont"
            android:layout_height="@dimen/item_medium_height"
            android:text="@string/profile_login_button"/>
    <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:textSize="@dimen/button_size_text"
            android:fontFamily="@font/zeldafont"
            android:layout_marginTop="@dimen/chat_size_text"
            android:layout_marginLeft="@dimen/chat_size_text"
            android:layout_marginRight="@dimen/chat_size_text"
            android:background="@color/white"
            android:layout_height="@dimen/item_medium_height"
            android:text="@string/logout"/>


</LinearLayout>